{
    "name": "PlayerEditorInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "bd6f136b-d77d-4613-9a1a-96f9c7a19f9c",
            "actions": [
                {
                    "name": "MouseLeftClick",
                    "type": "Button",
                    "id": "41326d76-fb52-48df-8fbb-9273393b2e38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "4328220b-5569-46bb-918c-a423c498d1f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "fe6348bf-de94-4a85-85ba-86f488ae7c6a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc07220e-1092-4c2e-be01-66e24808fc6d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5552bc57-f691-4e49-99a7-3dd6abcda3c9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c1dea8b-82a9-40b8-95f4-e0f0041c2fc5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}